# python-project-50

./: Makefile  README.md  demo.cast  demo1.cast  demo2.cast  demo3.cast  pyproject.toml  sonar-project.properties
.github/workflows/: pyci.yml
gendiff/: diff_builder.py  generate_diff.py  parser.py
gendiff/formatters/: plain.py  stylish.py
gendiff/scripts/: gendiff.py
hexlet_code/scripts/: gendiff.py
tests/: test_flat_json.py  test_flat_yaml.py  test_generate_diff.py  test_json_formatter.py  test_nested.py  test_plain_formatter.py
tests/test_data/flat_json/: expected.txt
tests/test_data/flat_yaml/: expected.txt
tests/test_data/nested_json/: expected.txt
tests/test_data/nested_yaml/: expected.txt
