[project]
name = "hexlet-code"
version = "0.1.0"
description = "Difference calculator"
authors = [{name = "Ivan63-coder"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[dependency-groups]
dev = [
    "ruff>=0.11.3",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "flake8>=7.3.0",
    "flake8-pyproject>=1.2.4",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.flake8]
line-length = 80

[lint.per-file-ignores]
"__init__.py" = ["F401"]

[lint]
preview = true
select = ["E", "F", "I", "C90"]
