[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
authors = [{name = "Ivan63-coder"}]
readme = "README.md"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "ruff>=0.7.1",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]
